packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Extract__c/Conversation_Extract__c.object-meta.xml
<CustomObject>
    <label>Conversation Extract</label>
    <pluralLabel>Conversation Extracts</pluralLabel>
    <nameField>
        <label>Extract Number</label>
        <displayFormat>CX-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>AI-extracted facts with confidence scores and source turn references. Suggestions until human-verified.</description>
</CustomObject>