packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Extract__c/fields/Confidence_JSON__c.field-meta.xml
<CustomField>
    <fullName>Confidence_JSON__c</fullName>
    <label>Confidence JSON</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>