packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Extract__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Extracts</relationshipLabel>
    <relationshipName>Reviewed_Extracts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>