packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Extract__c/fields/Source_Turn_References__c.field-meta.xml
<CustomField>
    <fullName>Source_Turn_References__c</fullName>
    <label>Source Turn References</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>