packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Extract__c/fields/Workflow_Instance__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Instance__c</fullName>
    <label>Workflow Instance</label>
    <type>Lookup</type>
    <referenceTo>Workflow_Instance__c</referenceTo>
    <relationshipLabel>Conversation Extracts</relationshipLabel>
    <relationshipName>Conversation_Extracts_WI</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>